# fastapi.click-tracking-service

./: pyproject.toml
src/: main.py
