[tool.poetry]
name = "fastapi-click-tracking-service"
version = "0.1.0"
description = "Small HTTP service that will track when a users clicks a URL"
authors = ["Travis [travistec04@gmail.com]"]
readme = "README.md"
packages = [{include = "fastapi"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
fastapi = "^0.88.0"
fastapi-common = "^0.3.11.0"
fastapi-manage = "^0.7.0"
fastapi-jwt = "^0.1.8"
fastapi-crud = "^0.0.3"
fastapi-utils = "^0.2.1"
aioredis = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
